<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="#fff"

    android:layout_height="match_parent">


    <ImageView
        android:layout_width="245dp"
        android:layout_height="245dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="-24dp"
        android:adjustViewBounds="true" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:adjustViewBounds="true"
        android:padding="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/logodoctor" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="125dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="WELCOME "
                android:fontFamily="@font/robotoblack"

                android:textColor="@color/black"
                android:textSize="26sp" />

        </LinearLayout>



    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/robotmeduim"
        android:gravity="center"
        android:text="Welcome to MyDoctor, Have a nice day with My Doctor"
        android:textColor="@color/black"
        android:textSize="10.0sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="374dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/LoginTextInputLayoutStyle"
            android:id="@+id/edtfullname"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/primary_text_light"
            app:hintTextColor="@color/primary_text_light">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_account_circle_black_24dp"
                android:drawablePadding="16dp"
                android:drawableTint="@color/primary_text_light"
                android:fontFamily="@font/robotmeduim"
                android:hint="@string/hint_fullname"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="@color/primary_text_light"
                android:textSize="16sp"
                app:boxStrokeColor="@color/primary_text_light" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtusername"

            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/primary_text_light"
            app:counterMaxLength="15"
            app:counterEnabled="true"
            app:hintTextColor="@color/primary_text_light">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_account_circle_black_24dp"
                android:drawablePadding="16dp"
                android:drawableTint="@color/primary_text_light"

                android:fontFamily="@font/robotmeduim"
                android:hint="@string/hint_username"

                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="@color/primary_text_light"
                android:textSize="16sp"
                app:boxStrokeColor="@color/primary_text_light" />
        </com.google.android.material.textfield.TextInputLayout>




        <com.google.android.material.textfield.TextInputLayout
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/primary_text_light"
            app:hintTextColor="@color/primary_text_light"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/primary_text_light"
            android:id="@+id/edtPassword"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="16dp"
                android:drawableTint="@color/primary_text_light"
                android:fontFamily="@font/robotmeduim"
                android:hint="@string/hint_password"
                android:inputType="textPassword"     app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/primary_text_light"




                android:maxLines="1"
                android:text=""

                android:textColor="@color/black"
                android:textSize="16sp"
                app:boxStrokeColor="@color/colorPrimary" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="50dp"
                    android:id="@+id/patient_img"
                    android:layout_height="54dp"
                    android:layout_gravity="center_horizontal"

                    android:layout_margin="5dp"
                    android:src="@drawable/patient"
                    app:civ_border_color="@color/colorPrimary"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="PATIENT"
                    android:textStyle="bold"
                    android:fontFamily="@font/robotmeduim"
                    android:textColor="@color/colorPrimary"
                    android:id="@+id/patient_txt"

                    />



            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginRight="10dp"

                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="50dp"
                    android:layout_height="54dp"
                    android:layout_gravity="center_horizontal"

                    android:layout_margin="5dp"
                    android:id="@+id/doctor_img"
                    android:src="@drawable/doct"
                    app:civ_circle_background_color="@color/white"

                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="DOCTOR"

                    android:id="@+id/doctor_txt"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:fontFamily="@font/robotmeduim"

                    />



            </LinearLayout>

        </LinearLayout>

<!--        <Button-->
<!--            android:id="@+id/forgot_password"-->
<!--            style="@style/Widget.MaterialComponents.Button.OutlinedButton"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="right"-->
<!--            android:layout_marginStart="5dp"-->
<!--            android:background="#fff"-->
<!--            android:fontFamily="@font/robotmeduim"-->
<!--            android:text="@string/title_activity_forgot_password"-->
<!--            android:textAllCaps="false"-->

<!--            android:textColor="@color/primary_text_light"-->
<!--            android:textSize="12sp"-->
<!--            android:textStyle="bold" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:background="@drawable/btn_rounded_login"
                android:text="@string/button_signUp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:gravity="right"
            android:orientation="horizontal">

            <!--            <ImageView-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:tint="@color/white"-->
            <!--                app:srcCompat="@drawable/ic_language_black_24dp" />-->

            <!--            <TextView-->
            <!--                android:id="@+id/changeLang"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginStart="3dp"-->
            <!--                android:clickable="true"-->
            <!--                android:text="@string/lang_dialog_title"-->
            <!--                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"-->
            <!--                android:textColor="@color/white"-->
            <!--                android:textStyle="bold" />-->

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/signIn_signUpButton"
        android:layout_width="fill_parent"
        android:layout_height="45.0dip"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:background="@color/auth_cancel_reason_header"
        android:gravity="center"
        android:orientation="horizontal"
        android:tag="binding_14">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_haveAccount"
            android:textColor="@color/auth_bottom_bar_text"
            android:textSize="14.0sp" />

        <Button
            android:id="@+id/btn_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6.0dip"
            android:layout_marginLeft="6.0dip"
            android:backgroundTint="@color/auth_cancel_reason_header"
            android:gravity="center_vertical"
            android:tag="binding_2"
            android:fontFamily="@font/robotmeduim"

            android:text="@string/button_signIn"
            android:textColor="@color/black"
            android:textSize="14.0sp" />
    </LinearLayout>


</RelativeLayout>